[tool.poetry]
name = "project-template"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "project_template"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
black = "^23.11.0"
mypy = "^1.7.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
